style.css
/* ... */
.action-button {
  width: 35px;
  height: 35px;
  margin: 5px;
  background: #eee;
  outline: none;
  cursor: pointer;
  padding: 0;
  border: 2px solid #555;
  border-radius: 5px;
}
.action-button img {
  width: 18px;
  margin-top: 2px;
}
.close-button {
  position: absolute;
  top: 0;
  right: 0;
  margin: 4px 3px;
}
#comics-bar h3 {
  margin: 0;
  font-size: 16px;
  padding: 0px 4px 4px 4px;
}
#comics-title {
  color: var(--marvel-red);
  font-weight: bold;
  width: calc(100% - 50px);
  padding: 4px 4px 0px 4px!important;
  min-height: 38px;
}
#comics-list {
  display: contents;
}
#comics-list li {
  padding: 5px;
  font-size: 15px;
  cursor: pointer;
  list-style-type: none;
}
#comics-list li:nth-child(even) {
  background: #2F2F2F;
}
@media (hover: hover) and (pointer: fine) {
  #comics-list li:hover {
    background: var(--marvel-red-dark);
    color: white;
  }
}
#comics-list li.selected {
  background: var(--marvel-red);
  color: white!important;
  font-weight: bold;
}
#comics-cache {
  display: none;
  opacity: 0;
  position: absolute;
  z-index: 5;
  cursor: pointer;
}
#comics-actions {
  width: 100%;
  height: 40px;
  text-align: center;
  display: inline-flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  margin: 2px 0 0 0;
}
#comics-actions button {
  width: 35px;
  height: 35px;
  margin: 0 2px;
  background: #eee;
  outline: none;
  cursor: pointer;
  font-size: 15px;
  font-family: monospace;
  font-weight: bold;
  padding: 0;
  border: 2px solid #555;
  border-radius: 5px;
}
#comics-actions button img {
  width: 24px;
  height: 24px;
  margin-top: 3px;
}
#comics-actions button.sort-button img {
  width: 26px;
  height: 26px;
  margin: 2px 0px 0px 1px;
}
#comics-actions button:disabled {
  opacity: 0.2;
  cursor: default;
  border: 2px solid #222;
}
#comics-actions button.sort-button:disabled {
  opacity: 1;
  background: var(--marvel-red-light);
}
#comics-pause {
  display: none;
}
.logo {
  float: left;
  padding: 3px 5px;
  height: 44px;
}
h1 {
  font-size: 26px;
  background-color: var(--marvel-red);
  color: white;
  padding: 10px 0px;
  margin: 0px 0px 10px 0px;
}
h2 {
  font-size: 16px;
  color: var(--marvel-red);
  margin: 0;
}
#explanations {
  clear: both;
  display: none;
  margin-top: 5px;
  padding: 5px 3px 0px 3px;
  overflow-y: auto;
  line-height: 13px;
}
#explanations p {
  margin: 7px;
}
#order {
  min-width: 20px;
  display: inline-block;
}
#clusters-legend b span {
  white-space: nowrap;
}
#explanations p.characters-details {
  margin: 0;
}
#node-details {
  clear: both;
  margin-top: 4px;
  padding: 5px;
  text-align: center;
  overflow-y: auto;
  max-height: 60%;
  border-top: 1px solid #444;
  line-height: 13px;
}
#node-label {
  margin: 7px 0px;
  width: 100%;
}
#node-img, #comic-img {
  max-width: 75%;
  max-height: 400px;
  cursor: pointer;
}
#comic-title {
  margin: 0;
}
#comic-img {
  max-width: 90%;
  padding-top: 5px;
}
#comic-url {
  display: none;
}
.comic-entities {
  display: none;
  width: calc(50% - 4px);
  padding: 0;
  margin: 0;
  float: left;
}
.comic-entities h4 {
  margin: 10px 0 5px 0;
}
.comic-entities ul {
  padding: 0;
  margin: 0px 0px 10px 0px;
}
.comic-entities li {
  list-style-type: none;
  padding: 0;
  margin: 0;
}
#comic-creators {
  padding: 0 2px 0 0;
}
#comic-characters {
  padding: 0 0 0 2px;
}
#comic-creators li:nth-child(even) {
  background: #2F2F2F;
}
#comic-characters li:nth-child(odd) {
  background: #2F2F2F;
}
#view-comics, #view-node, #view-all-comics {
  cursor: pointer;
  font-weight: bold;
  font-size: 16px;
  margin-top: 20px!important;
  margin-bottom: 15px!important;
  text-transform: uppercase;
  line-height: 20px;
}
#view-all-comics {
  display: none;
  padding-top: 5px;
}
#view-comics > span, #view-node > span, #view-all-comics span {
  width: 170px;
  background-color: var(--marvel-red);
  color: #DDD!important;
  border: 2px solid #555;
  border-radius: 5px;
  padding: 5px;
}
#sidebar a, #sidebar a:visited, #comics-bar a, #comics-bar a:visited {
  color: #af4f4f;
}
.footer {
  position: absolute;
  bottom: 0px;
  width: 300px;
  line-height: 13px;
}
.footer p {
  font-size: 11px;
  padding: 4px 0px;
  border-top: 1px solid #444;
  margin: 0;
}
.footer p.characters-details {
  display: none;
}
#title {
  padding-bottom: 5px;
  color: grey;
}
#credits, #title {
  display: block;
}
#credits-small {
  display: none;
}
.sigma-container {
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: black;
}
.sigma-container > canvas {
  display: none;
}
#clusters-layer {
  width: 100%;
  height: 100%;
  position: absolute;
}
.clusterLabel {
  position: absolute;
  transform: translate(-50%, -50%);
  text-transform: uppercase;
  font-family: monospace;
  font-weight: bold;
  font-size: 16px;
  padding: 3px 8px;
  background-color: rgba(0, 0, 0, 0.55);
  border-radius: 14px;
  text-align: center;
}
#loader {
  position: absolute;
  top: calc(50% - 35px);
  left: calc(50% + 115px);
  z-index: 10;
  display: none;
  opacity: 0;
  -webkit-transition: 0.25s ease-in-out;
  -moz-transition: 0.25s ease-in-out;
  -o-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}
#loader img {
  padding: 10px;
  opacity: 0.85;
  width: 50px;
}
#loader-comics {
  z-index: 10;
  display: none;
}
#loader-comics img {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 25px;
  height: 25px;
  padding: 3px;
}
#loader-list {
  display: none;
}
#loader-list img {
  position: relative;
  top: 35px;
  left: 0;
  width: 35px;
  height: 35px;
}
#modal {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 20;
  display: none;
  background-color: rgba(0, 0, 0, 0.85);
  text-align: center;
  cursor: pointer;
}
#modal-helper {
  height: 100%;
  display: inline-block;
  vertical-align: middle;
}
#modal-img {
  max-width: calc(100% - 10px);
  max-height: calc(100% - 50px);
  z-index: 20;
  vertical-align: middle;
  margin: 5px 5px 45px 0;
}
/* ... */

